# PointCloud_kNN

./: README.md  main.cpp
Post_pro_python_demo/: README.md  postpro.ipynb
includes/: get_distance_config.h  knn.h  knn_config.h  voting.h  voting_config.h
init/: input.cfg
sources/: get_distance.cpp  knn.cpp
vpor_post_pro/: pull_binaries.sh  pull_vproData.sh
vpor_post_pro/host/: .gitignore  README
vpor_post_pro/host/cnn_yolo_lite_hw/: README.md  compare_binary_results.sh  convert_binary_images.sh  switch_input_endianes_16.sh
vpor_post_pro/host/cnn_yolo_lite_hw/checker/: CMakeLists.txt  dump_mm.cpp  helper.hpp  main.cpp
vpor_post_pro/host/cnn_yolo_lite_hw/checker/includes/: AuxDebugFifoReader.h  CnnCommunication.h  CnnPostprocessing.h  ConsolePrinter.h  RiscCommunication.h  TimePrinter.h
vpor_post_pro/host/cnn_yolo_lite_hw/checker/sources/: AuxDebugFifoReader.cpp  CnnCommunication.cpp  CnnPostprocessing.cpp  ConsolePrinter.cpp  MipsDebugReader.cpp  RiscCommunication.cpp
vpor_post_pro/host/cnn_yolo_lite_hw/data/: matlab_verify.mlx
vpor_post_pro/host/common/: vpro_host_aux.cpp  vpro_host_aux.h  vpro_memory_map.h
vpor_post_pro/host/common/old/: opencv_helper.h
vpor_post_pro/host/hog/: hw_emulate.sh  main.cpp
vpor_post_pro/host/template/: README
vpor_post_pro/host/template/checker/: CMakeLists.txt  main.cpp
vpor_post_pro/host/template/checker/includes/: Communication.h  TimePrinter.h
vpor_post_pro/host/template/checker/sources/: AuxDebugFifoReader.cpp  Communication.cpp  MipsDebugReader.cpp
vpor_post_pro/host/template/scripts/: convert_binary_images.sh  generate_random_data.sh  switch_input_endianes_16.sh
vpor_post_pro/host/verifyHW/: diff_dma1hex  diff_dma_fpga2.bin.hex  diff_okTests.bin.hex  git_ci_run_tests.py  transcript
vpor_post_pro/host/verifyHW/checker/: CMakeLists.txt  main.cpp
vpor_post_pro/host/verifyHW/checker/includes/: ConsolePrinter.h  MipsDebugReader.h  communication.h
vpor_post_pro/host/verifyHW/checker/sources/: ConsolePrinter.cpp  MipsDebugReader.cpp  TimePrinter.cpp  communication.cpp
vpor_post_pro/isa_intrinsic_lib/: CMakeLists.txt  core_class_wrapper.cpp  core_class_wrapper.h  core_dma_broadcast.hpp  isa_intrinsic_aux_lib.cpp  isa_intrinsic_aux_lib.h  isa_intrinsic_aux_lib_old.h
vpor_post_pro/isa_intrinsic_lib/model/: core.h  vproCore.cpp  vproCore.h
vpor_post_pro/isa_intrinsic_lib/model/architecture/: Cluster.cpp  Cluster.h  DMA.cpp  DMA.h  VectorLane.cpp  VectorLane.h  VectorLaneLS.cpp  VectorLaneLS.h  VectorUnit.cpp  VectorUnit.h
vpor_post_pro/isa_intrinsic_lib/model/architecture/stats/: DMAStat.cpp  DMAStat.h  LaneStat.cpp  LaneStat.h  SimStat.cpp  SimStat.h  UnitStat.cpp  UnitStat.h
vpor_post_pro/isa_intrinsic_lib/model/commands/: CommandBase.cpp  CommandBase.h  CommandDMA.cpp  CommandDMA.h  CommandSim.cpp  CommandSim.h  CommandVPRO.cpp  CommandVPRO.h
vpor_post_pro/isa_intrinsic_lib/simulator/: VectorMain.cpp  VectorMain.h  setting.h  simCore.cpp  simCore.h  simSim.cpp
vpor_post_pro/isa_intrinsic_lib/simulator/helper/: debugHelper.cpp  debugHelper.h  structTypes.hpp  typeConversion.cpp  typeConversion.h
vpor_post_pro/isa_intrinsic_lib/simulator/windows/Commands/: Commands.pro  commandstablewidget.cpp  commandstablewidget.h  commandwindow.cpp  commandwindow.h  commandwindow.ui  dataupdatefunctions.cpp  dataupdatefunctions.h  lmtableview.cpp  lmtableview.h  main.cpp  rftableview.cpp  rftableview.h  savemain.cpp  savemain.h  savesettings.cpp  savesettings.h  siminitfunctions.cpp  siminitfunctions.h  simupdatefunctions.cpp  simupdatefunctions.h  spinneroverlay.cpp  spinneroverlay.h
vpor_post_pro/vpro/: README  main.cpp  ref_cmakeList.txt  remotecompile.sh
vpor_post_pro/vpro/common/: crt0.asm  mips_aux.cpp  mips_aux.h  mips_aux.hpp  mips_link_script.lds  vpro_aux.h  vpro_globals.cpp  vpro_globals.h  vpro_mips.h
vpor_post_pro/vpro/knn_post_pro/build_release/: sim
vpor_post_pro/vpro/knn_post_pro/build_release/VPRO_SIMULATOR_LIB/VPRO_SIMULTOR_LIB_autogen/: moc_predefs.h
vpor_post_pro/vpro/knn_post_pro/build_release/VPRO_SIMULATOR_LIB/VPRO_SIMULTOR_LIB_autogen/7JQH7IAJVV/: moc_commandstablewidget.cpp  moc_commandstablewidget.cpp.d  moc_commandwindow.cpp  moc_commandwindow.cpp.d  moc_lmtableview.cpp  moc_lmtableview.cpp.d  moc_rftableview.cpp  moc_rftableview.cpp.d  moc_spinneroverlay.cpp  moc_spinneroverlay.cpp.d
vpor_post_pro/vpro/knn_post_pro/build_release/VPRO_SIMULATOR_LIB/VPRO_SIMULTOR_LIB_autogen/E5BDB4F6IB/: moc_Cluster.cpp  moc_Cluster.cpp.d  moc_VectorLane.cpp  moc_VectorLane.cpp.d  moc_VectorUnit.cpp  moc_VectorUnit.cpp.d
vpor_post_pro/vpro/knn_post_pro/build_release/VPRO_SIMULATOR_LIB/VPRO_SIMULTOR_LIB_autogen/LXGZ3MSUWV/: moc_VectorMain.cpp  moc_VectorMain.cpp.d  moc_simCore.cpp  moc_simCore.cpp.d
vpor_post_pro/vpro/knn_post_pro/build_release/VPRO_SIMULATOR_LIB/VPRO_SIMULTOR_LIB_autogen/include/: ui_commandstablewidget.h  ui_commandwindow.h
vpor_post_pro/vpro/knn_post_pro/data/: L_con_results  L_prim  N_prim  depth2d_input_vpro  depth3d_input_vpro  labels2d_input_vpro  points_2d_mapping_input_vpro  tester.py
vpor_post_pro/vpro/knn_post_pro/exit/: exit.sh  output.cfg
vpor_post_pro/vpro/knn_post_pro/includes/: get_distance.h  global_knn.h  voting.h
vpor_post_pro/vpro/knn_post_pro/init/: init.sh  input.cfg
vpor_post_pro/vpro/knn_post_pro/scripts/: run_different_hw_configs.py
vpor_post_pro/vpro/knn_post_pro/sources/: get_distance.cpp  knn.cpp  voting.cpp
vpor_post_pro/vpro/template/: CMakeLists.txt  CMakeListsAdd.txt  main.cpp  mem_functions.cpp
vpor_post_pro/vpro/template/exit/: exit.sh
vpor_post_pro/vpro/template/includes/: application.h  defines.h
vpor_post_pro/vpro/template/init/: init.sh
vpor_post_pro/vpro/template/scripts/: scientific_csv_to_excel.py
vpor_post_pro/vpro/template/sources/: application.cpp  defines.cpp
